<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_setting_account" />

        <EditText
            android:id="@+id/et_setting_account"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </LinearLayout>

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >

	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/ev_setting_password" />

	    <EditText
	        android:id="@+id/et_setting_password"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:inputType="textPassword" />

	</LinearLayout>

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >

	    <Button
	        android:id="@+id/btn_setting_sync"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/btn_setting_sync" />

		<Button
		    android:id="@+id/btn_setting_register"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/btn_setting_register" />

	</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_setting_last_sync" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_setting_version" >

</TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btn_setting_upgrade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_setting_upgrade" />

    </LinearLayout>
</LinearLayout>
