<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<ListView
	    android:id="@+id/lv_course"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >
	    
	</ListView>

	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >

	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="match_parent" >

	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent"
	            android:text="@string/tv_course" >
	            
	        </TextView>

	        <EditText
	            android:id="@+id/et_course_name"
	            android:layout_width="fill_parent"
	            android:layout_height="match_parent"
	            android:inputType="text" >
	            
	        </EditText>
	    </LinearLayout>

	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content" >

	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/tv_course_time" >
	            
	        </TextView>

	        <EditText
	            android:id="@+id/et_course_time"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:inputType="text" >
	            
	        </EditText>
	    </LinearLayout>

	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >

	        <Button
	            android:id="@+id/btn_course_add"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/btn_course_add" >
	            
	        </Button>

	        <Button
	            android:id="@+id/btn_course_cancel"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/btn_course_cancel" >
	            
	        </Button>
	    </LinearLayout>
	</LinearLayout>
</LinearLayout>
